--- a/src/app/media-item-list.component.html
+++ b/src/app/media-item-list.component.html
@@ -1,7 +1,14 @@
 <section>
-  <mw-media-item 
-    [ngClass]="{'medium-movies': mediaItem.medium==='Movies', 'medium-series':mediaItem.medium==='Series'}"
+  <header>
+    <div>{{ mediaItems | categoryList }}</div>
+  </header>
+  <mw-media-item
+    [ngClass]="{
+      'medium-movies': mediaItem.medium === 'Movies',
+      'medium-series': mediaItem.medium === 'Series'
+    }"
     *ngFor="let mediaItem of mediaItems"
     [mediaItem]="mediaItem"
-    (delete)="onMediaItemDelete($event)"></mw-media-item>
+    (delete)="onMediaItemDelete($event)"
+  ></mw-media-item>
 </section>
