--- a/src/app/media-item-form.component.html
+++ b/src/app/media-item-form.component.html
@@ -1,9 +1,7 @@
 <header>
   <h2>Add Media to Watch</h2>
 </header>
-<form
-  [formGroup]="form"
-  (ngSubmit)="onSubmit(form.value)">
+<form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
   <ul>
     <li>
       <label for="medium">Medium</label>
@@ -14,7 +12,10 @@
     </li>
     <li>
       <label for="name">Name</label>
-      <input type="text" name="name" id="name" formControlName="name">
+      <input type="text" name="name" id="name" formControlName="name" />
+      <div *ngIf="form.get('name').hasError('pattern')" class="error">
+        Name has invalid character
+      </div>
     </li>
     <li>
       <label for="category">Category</label>
@@ -29,7 +30,16 @@
     </li>
     <li>
       <label for="year">Year</label>
-      <input type="text" name="year" id="year" maxlength="4" formControlName="year">
+      <input
+        type="text"
+        name="year"
+        id="year"
+        maxlength="4"
+        formControlName="year"
+      />
+      <div *ngIf="form.get('year').errors as yearErrors" class="error">
+        Must be between {{ yearErrors.year.min }} and {{ yearErrors.year.max }}
+      </div>
     </li>
   </ul>
   <button type="submit" [disabled]="!form.valid">Save</button>
